Fixed overflow and positioning issues for disclaimer box

--- a/www/includes/deed3.css
+++ b/www/includes/deed3.css
@@ -219,7 +219,7 @@
       -webkit-border-radius: 5px;
       border-radius: 5px;
       color: #777;
-      overflow-y: auto; 
+      overflow-y: hidden; 
     }
 
     #deed-disclaimer .summary {
@@ -232,6 +232,7 @@
     #deed-disclaimer .disclaimer {
       position: absolute;
       right: 0;
+      top: 0;
       padding: 4px 10px 5px;
     }
     #deed-disclaimer a {
